--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.0.0'
     compile 'com.sparkjava:spark-template-mustache:1.0.0'
     compile 'org.flywaydb:flyway-core:3.0'
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.slf4j:slf4j-log4j12:1.7.6'
     
     testCompile 'org.jmockit:jmockit:1.9'
     testCompile 'junit:junit:4.11', {
