--- a/src/test/java/sqlnote/db/SqlNoteRepositoryTest_追加_expected.yaml
+++ b/src/test/java/sqlnote/db/SqlNoteRepositoryTest_追加_expected.yaml
@@ -20,20 +20,25 @@ SQL_PARAMETERS:
 -
     SQL_ID: 2
     NAME: param2
+    DATA_TYPE: STRING
     SORT_ORDER: 2
 -
     SQL_ID: 2
     NAME: param1
+    DATA_TYPE: DATE
     SORT_ORDER: 1
 -
     SQL_ID: 3
     NAME: param3
+    DATA_TYPE: NUMBER
     SORT_ORDER: 1
 -
     SQL_ID: 4
     NAME: aaa
+    DATA_TYPE: STRING
     SORT_ORDER: 1
 -
     SQL_ID: 4
     NAME: bbb
+    DATA_TYPE: NUMBER
     SORT_ORDER: 2
