--- a/src/test/java/sqlnote/db/SqlNoteRepositoryTest_削除_expected.yaml
+++ b/src/test/java/sqlnote/db/SqlNoteRepositoryTest_削除_expected.yaml
@@ -7,6 +7,10 @@ SQL_NOTE:
     ID: 3
     TITLE: title3
     SQL_TEMPLATE: sql3
+-
+    ID: 90
+    TITLE: title90
+    SQL_TEMPLATE: sql90
 
 SQL_PARAMETERS: 
 -
