--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.apache.commons:commons-dbcp2:2.0.1'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.codehaus.groovy:groovy-all:2.3.0'
     compile 'org.hsqldb:hsqldb:2.3.2'
