--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+    compile fileTree(dir: 'lib', include: '*.jar')
     compile 'org.apache.commons:commons-dbcp2:2.0.1'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.codehaus.groovy:groovy-all:2.3.0'
@@ -39,4 +40,3 @@ eclipse {
         name = 'SQLNote'
     }
 }
-
