--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ repositories {
     maven { url 'http://public-maven.classmethod.info/snapshot' }
 }
 
+sourceSets.main.java.srcDirs = []
+sourceSets.main.groovy.srcDirs += 'src/main/java'
+
 dependencies {
-    compile fileTree(dir: 'lib', include: '*.jar')
+    compile fileTree(dir: 'jdbc_driver', include: '*.jar')
     compile 'org.apache.commons:commons-dbcp2:2.0.1'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.codehaus.groovy:groovy-all:2.3.0'
