--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,16 @@ dependencies {
     compile 'org.flywaydb:flyway-core:3.0'
     compile 'log4j:log4j:1.2.17'
     compile 'org.slf4j:slf4j-log4j12:1.7.6'
+    compile 'org.dbunit:dbunit:2.4.9'
     
     testCompile 'org.jmockit:jmockit:1.9'
     testCompile 'junit:junit:4.11', {
         transitive = false
     }
     testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile 'jp.classmethod.testing:cmtest-db:0.4'
+    testCompile 'jp.classmethod.testing:cmtest-db:0.4', {
+        exclude module: 'dbunit'
+    }
 }
 
 startScripts {
